fixed page styles
Header image was broken, restyled to match home page cropped image.

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ img {
 .post-title h1 {
 	font-family: 'Merriweather',Georgia,serif;
 	font-weight:700;
-	font-size:48px;
+	font-size:36px;
 	line-height:1;
 }
 .post-title p {
